--- a/style.css
+++ b/style.css
@@ -85,6 +85,8 @@ carda {
     display: flex;
     flex-direction: row;
     align-items: center;
+    max-width: 400x;
+    min-width: 400x;
     background: white;
     border-radius: 10px;
     box-shadow: rgba(0,0,0,0.15) 0 5px 15px;
@@ -104,8 +106,13 @@ carda {
     min-height: 50px;
 }
 .img {
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 200px;
+    display: flex;
+    align-self: center;
+    justify-self: center;
+}
+.icon {
     font-size: 100px;
     display: flex;
     align-self: center;
